--- a/public/gate-of-heaven-tour.html
+++ b/public/gate-of-heaven-tour.html
@@ -65,19 +65,16 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <div class="mb-5"><img class="w-100 rounded-3" src="./assets/img/dest/ubud2.jpeg" alt="Ubud Tour 2"></div>
-              <h1 class="fw-bold fs-3 fs-lg-5 mb-3">Ubud Tour 2</h1>
-              <h5 class="text-warning fw-bold mb-4">Price : USD 55/ Car</h5>
+              <div class="mb-5"><img class="w-100 rounded-3" src="./assets/img/dest/gateofheaven/lempuyangtemple.jpg" alt="Gate Of Heaven Tour"></div>
+              <h1 class="fw-bold fs-3 fs-lg-5 mb-3">Gate Of Heaven Tour</h1>
+              <h5 class="text-warning fw-bold mb-4">Price : USD 90/ Car</h5>
               <div class="row mb-5">
                 <div class="col-md-6">
                   <h5 class="fw-bold mb-3">Itinerary :</h5>
                   <ul class="list-unstyled">
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>White water rafting</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>ATV ride</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tirta empul</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Gunung kawi temple</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Kanto lampo waterfall</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tibumana waterfall</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Lempuyang Temple</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tirta Gangga Park</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Lahangan sweet</li>
                   </ul>
                 </div>
                 <div class="col-md-6">
@@ -88,7 +85,6 @@
                     <li class="d-flex align-items-center mb-2"><i class="fas fa-check text-success me-3"></i>Charger plug</li>
                     <li class="d-flex align-items-center mb-2"><i class="fas fa-check text-success me-3"></i>Parking & toll fee</li>
                     <li class="d-flex align-items-center mb-2"><i class="fas fa-check text-success me-3"></i>Petrol</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-check text-success me-3"></i>White water rafting</li>
                   </ul>
                 </div>
               </div>
@@ -96,38 +92,20 @@
               <div class="d-flex flex-column gap-5">
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">White water rafting</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/whitewaterrafting.jpeg" alt="White water rafting">
-                    <p>Although there are many rivers in Bali, not all rivers are suitable for rafting trips. There are three river locations in Bali that are ideal for rafting trips. The river is the Ubud Ayung River, the Telaga Waja Karangasem River, and the Klungkung Melangit River. Every stream has pros and cons. However, for this page, we inform you about the arung Ayung river in Ubud Bali for rafting trips.</p>
+                    <h5 class="fw-bold text-warning">Lempuyang Temple</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/gateofheaven/lempuyangtemple.jpg" alt="Lempuyang Temple">
+                    <p>Lempuyang Temple is one of the biggest Hindu temple located in East Bali islands at Karangasem city, sub-district Abang, Tribuana village. Situated in the top of Bisbis Hill, from this temple you can see the amazing view of mount agung. The temple is a holy place for worship Ida Sanghyang Widhi Wasa in its manifestation as Icwara. Lot of tourist take picture in the gate of lempuyang temple with background mount agung view. The name of Gate of Heaven is come from the tourist that taking picture in the gate of lempuyang temple with beauty mount agung view as background. because of the beautiful scenery, guests call it a view of heaven and a place to take photos at the gate of the temple of Tempuyang. So most guests call this place the gate of heaven</p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">ATV ride</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/atvride.jpg" alt="ATV ride">
-                    <p>TV Ride Bali is an activity that uses four-wheeled motorbikes, usually used for agriculture now for recreation. The wheels are specifically modified for off-road environments, with a 250 cc engine capacity or a 350 cc engine. It is suitable for wet and off road terrain, reliable controls for maneuvering so ATV Ride is a tourist activity to test adrenaline, if you follow instructions and remain careful, ATV rides are guaranteed to be an unforgettable and exciting trip.</p>
+                    <h5 class="fw-bold text-warning">Tirta Gangga Park</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/gateofheaven/tirtaganggapark.jpg" alt="Tirta Gangga Park">
+                    <p>Is a beautiful garden with water fountain and fish pond surrounds at East Bali Islands. This garden is built by King of Karangasem for their relaxation with their family. Amazing place for visit during East Bali Tour. This garden is utilized by empire family for bathing place and now have been arranged natty and fascinate. There is big clean water source that is poured into a channel and go to the tower to make a water fountain. The water palace of Tirta gangga was built in 1948 by King Anak Agung Anglurah Ketut Karangasem in east Bali, This palace has been shaped in the form of a beautiful water garden and it is located near a natural spring.</p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">Tirta empul</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/tirtaempul.jpg" alt="Tirta empul">
-                    <p>Tirta Empul, meaning ‘holy water spring’ is actually the name of a water source located within the temple. The spring feeds various purification baths, pools and fish ponds surrounding the outer perimeter, which all flow to the Tukad Pakerisan River. Various sites throughout the region and many other archaeological relics relate to local myths and legends.</p>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-12">
-                    <h5 class="fw-bold text-warning">Gunung kawi temple</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/gunungkawitemple.jpg" alt="Gunung kawi temple">
-                    <p>Gunung Kawi Temple complex, locally referred to as Pura Gunung Kawi, is one of Bali’s most unique archaeological sites, comprising a collection of ancient shrine reliefs carved into the face of a rock cliff. The main site overlooks the sacred Pakerisan River, which also flows by the Tirta Empul Temple a kilometre up north. Across the river from the ancient reliefs is a temple courtyard featuring old Hindu shrines in a more contemporary architectural style, which is attended by pilgrims especially during its ‘piodalan’ temple anniversaries.</p>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-12">
-                    <h5 class="fw-bold text-warning">Kanto lampo waterfall</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/kantolampowaterfall.jpg" alt="Kanto lampo waterfall">
-                    <p>When you are bored with the views of the beaches in Bali, visiting a waterfall in the Gianyar region, the Kanto Lampo Waterfall is an interesting choice. Unlike the location of a waterfall that is usually located in the mountains or highlands, Kanto Lampo Gianyar Waterfall is even in the lowlands and has a hot temperature during the day.</p>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-12">
-                    <h5 class="fw-bold text-warning">Tibumana waterfall</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/tibumanawaterfall.jpeg" alt="Tibumana waterfall">
-                    <p>You will never get bored of traveling to Bali. In addition to the beach, there are alternative tourist attractions that are not less beautiful to visit. Like Tibumana Waterfall, whose natural beauty is also able to attract tourists to come. This waterfall is unique because of its shape like a twin waterfall.Tibumana Waterfall is a twin waterfall with 2 adjacent water streams. But when the river water above it is small, there is only one large stream that drops into a waterfall. Under the waterfall there is a pool of water that is not too deep so it is very comfortable if used for swimming or bathing. The manager has also prepared tires that can be used as buoys.</p>
+                    <h5 class="fw-bold text-warning">Lahangan Sweet</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/gateofheaven/lahangansweet.png" alt="Lahangan Sweet">
+                    <p>Lahangan Sweet offers breathtaking panoramic views of Nusa Penida's rugged coastline and lush landscapes. This scenic viewpoint is renowned for its dramatic cliffside vistas, making it an ideal spot for capturing stunning photos and enjoying the island's natural beauty. As you gaze out over the crystal-clear waters and vibrant greenery, you'll experience a serene escape, perfect for those seeking to immerse themselves in the island's tranquil charm and awe-inspiring scenery.</p>
                   </div>
                 </div>
               </div>
@@ -158,7 +136,7 @@
                       </div>
                       <div class="mb-3">
                         <label class="form-label fw-bold">Tour Packages</label>
-                        <input class="form-control" id="tourPackage" type="text" value="Ubud Tour 2" readonly>
+                        <input class="form-control" id="tourPackage" type="text" value="Gate Of Heaven Tour" readonly>
                       </div>
                       <div class="mb-3">
                         <label class="form-label fw-bold">Note ( Optional )</label>
@@ -294,7 +272,7 @@
       }
 
       body {
-        background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('assets/img/dest/ubud2/tirtaempul.jpg') no-repeat center center fixed;
+        background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('assets/img/dest/gateofheaven/lempuyangtemple.jpg') no-repeat center center fixed;
         background-size: cover;
       }
     </style>
