--- a/public/kintamani-tour.html
+++ b/public/kintamani-tour.html
@@ -65,19 +65,18 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <div class="mb-5"><img class="w-100 rounded-3" src="./assets/img/dest/ubud2.jpeg" alt="Ubud Tour 2"></div>
-              <h1 class="fw-bold fs-3 fs-lg-5 mb-3">Ubud Tour 2</h1>
-              <h5 class="text-warning fw-bold mb-4">Price : USD 55/ Car</h5>
+              <div class="mb-5"><img class="w-100 rounded-3" src="./assets/img/dest/kintamani/mountbatur.jpeg" alt="Kintamani Tour"></div>
+              <h1 class="fw-bold fs-3 fs-lg-5 mb-3">Kintamani Tour</h1>
+              <h5 class="text-warning fw-bold mb-4">Price : USD 75/ Car</h5>
               <div class="row mb-5">
                 <div class="col-md-6">
                   <h5 class="fw-bold mb-3">Itinerary :</h5>
                   <ul class="list-unstyled">
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>White water rafting</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>ATV ride</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tirta empul</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Gunung kawi temple</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Kanto lampo waterfall</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tibumana waterfall</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tirta ampul holy water</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Art village ( batik, silver, wood carving )</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Mount batur volcano</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Coffee plantation</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tukad Cepung</li>
                   </ul>
                 </div>
                 <div class="col-md-6">
@@ -88,7 +87,6 @@
                     <li class="d-flex align-items-center mb-2"><i class="fas fa-check text-success me-3"></i>Charger plug</li>
                     <li class="d-flex align-items-center mb-2"><i class="fas fa-check text-success me-3"></i>Parking & toll fee</li>
                     <li class="d-flex align-items-center mb-2"><i class="fas fa-check text-success me-3"></i>Petrol</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-check text-success me-3"></i>White water rafting</li>
                   </ul>
                 </div>
               </div>
@@ -96,38 +94,33 @@
               <div class="d-flex flex-column gap-5">
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">White water rafting</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/whitewaterrafting.jpeg" alt="White water rafting">
-                    <p>Although there are many rivers in Bali, not all rivers are suitable for rafting trips. There are three river locations in Bali that are ideal for rafting trips. The river is the Ubud Ayung River, the Telaga Waja Karangasem River, and the Klungkung Melangit River. Every stream has pros and cons. However, for this page, we inform you about the arung Ayung river in Ubud Bali for rafting trips.</p>
+                    <h5 class="fw-bold text-warning">Tirta Empul Temple (Holy Spring Temple)</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/kintamani/tirtaempultemple.jpeg" alt="Tirta Empul Temple">
+                    <p>Tirta Empul temple also known as the Holy Spring Temple located in Tampak Siring, for more thousand years the Balinese worshippers has been come to this temple for having the holy water to purified the body from Bad luck, local people believe if the water in this temple has power to clean body from negative things. a myth described if this sacred spring temple is build by God of Indra give to the dead warriors which been killed by Arrogant king Maya Denawa, the dead warrior come alive after sprang the water from this holy spring temple.</p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">ATV ride</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/atvride.jpg" alt="ATV ride">
-                    <p>TV Ride Bali is an activity that uses four-wheeled motorbikes, usually used for agriculture now for recreation. The wheels are specifically modified for off-road environments, with a 250 cc engine capacity or a 350 cc engine. It is suitable for wet and off road terrain, reliable controls for maneuvering so ATV Ride is a tourist activity to test adrenaline, if you follow instructions and remain careful, ATV rides are guaranteed to be an unforgettable and exciting trip.</p>
+                    <h5 class="fw-bold text-warning">Art village ( batik, silver, wood carving )</h5>
+                    <div class="d-flex gap-3 flex-wrap my-3"><img class="rounded-2" src="./assets/img/dest/ubud1/batikubud.jpg" width="200" alt="Batik"><img class="rounded-2" src="./assets/img/dest/ubud1/silverubud.jpg" width="200" alt="Silver"><img class="rounded-2" src="./assets/img/dest/ubud1/woodcarving.jpg" width="200" alt="Wood Carving"></div>
+                    <p>Ubud is a town on the Indonesian island of Bali in Ubud District, located amongst rice paddies and steep ravines in the central foothills of the Gianyar regency. One of Bali's major arts and culture centres, it has developed a large tourism industry. Ubud is being one of the famous village most visited in Bali islands due this village offered with many kind beautiful art, myth, and history. Is perfect tourist destination for those who love with Art and Culture history.</p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">Tirta empul</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/tirtaempul.jpg" alt="Tirta empul">
-                    <p>Tirta Empul, meaning ‘holy water spring’ is actually the name of a water source located within the temple. The spring feeds various purification baths, pools and fish ponds surrounding the outer perimeter, which all flow to the Tukad Pakerisan River. Various sites throughout the region and many other archaeological relics relate to local myths and legends.</p>
+                    <h5 class="fw-bold text-warning">Mount Batur Volcano</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/kintamani/mountbatur.jpeg" alt="Mount Batur Volcano">
+                    <p>Kintamani Village is the object of mountain tourism is very unique and stunning, with cool air condition in the daytime and cold at night. Kintamani is 1500 meters high, the village of Kintamani his a cool, damp climate suited to growing oranges and passion fruit and on market day, which falls every third day, the main street becomes a bustling chaos of vendors, some of whom have traveled from far away. Tourism Object is located in the area is located in the village of Batur. We can watch stunning natural scenery of Penelokan, a combination of Mount Batur and the expanse of black rock with Lake Batur and on a blue caldera.</p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">Gunung kawi temple</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/gunungkawitemple.jpg" alt="Gunung kawi temple">
-                    <p>Gunung Kawi Temple complex, locally referred to as Pura Gunung Kawi, is one of Bali’s most unique archaeological sites, comprising a collection of ancient shrine reliefs carved into the face of a rock cliff. The main site overlooks the sacred Pakerisan River, which also flows by the Tirta Empul Temple a kilometre up north. Across the river from the ancient reliefs is a temple courtyard featuring old Hindu shrines in a more contemporary architectural style, which is attended by pilgrims especially during its ‘piodalan’ temple anniversaries.</p>
+                    <h5 class="fw-bold text-warning">Coffee Plantation or Bali Agrotourism</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/kintamani/coffeeplantation.jpg" alt="Coffee Plantation">
+                    <p>Coffee Plantation or Bali Agrotourism is coffe farm where you can see varius of coffe planation and see the making of the famous animal coffe or known as a coffe luwak. in this place you can see various of plantation such as coffee arabica, coffee robusta, pineapple, balinesse snake fruit, and etc. expereince to see how to make Balinesse coffee, try the best of balinesse coffe or ginger tea with green view river valley. They sell variety of theirs original Balinese coffee products, herb oil and etc and see the civet cat the most expensive coffee maker, wellknown as Luwak, its produce "Coffee Luwak" and the process of the bean passing through the digestive tract of the civet chemically alters the proteins in the Luwak coffee bean to yield more complex and smooth flavors, not found in conventional coffees.</p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">Kanto lampo waterfall</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/kantolampowaterfall.jpg" alt="Kanto lampo waterfall">
-                    <p>When you are bored with the views of the beaches in Bali, visiting a waterfall in the Gianyar region, the Kanto Lampo Waterfall is an interesting choice. Unlike the location of a waterfall that is usually located in the mountains or highlands, Kanto Lampo Gianyar Waterfall is even in the lowlands and has a hot temperature during the day.</p>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-12">
-                    <h5 class="fw-bold text-warning">Tibumana waterfall</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/tibumanawaterfall.jpeg" alt="Tibumana waterfall">
-                    <p>You will never get bored of traveling to Bali. In addition to the beach, there are alternative tourist attractions that are not less beautiful to visit. Like Tibumana Waterfall, whose natural beauty is also able to attract tourists to come. This waterfall is unique because of its shape like a twin waterfall.Tibumana Waterfall is a twin waterfall with 2 adjacent water streams. But when the river water above it is small, there is only one large stream that drops into a waterfall. Under the waterfall there is a pool of water that is not too deep so it is very comfortable if used for swimming or bathing. The manager has also prepared tires that can be used as buoys.</p>
+                    <h5 class="fw-bold text-warning">Tukad Cepung</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/kintamani/tukadcepung.webp" alt="Tukad Cepung">
+                    <p>Tukad Cepung Waterfall still remains as the best virgin waterfall of Bali. The fact that this spot is not known to a lot of people and still not under the commercial tourist spots, you are not under any obligations to pay anything to enter area. However, since the area is well-maintained by the local villagers and some of them contribute in showing and/or explaining the waterfall to the visitors, it would be kind if you gave a tip so they can continue to maintain this hidden spot.</p>
                   </div>
                 </div>
               </div>
@@ -158,7 +151,7 @@
                       </div>
                       <div class="mb-3">
                         <label class="form-label fw-bold">Tour Packages</label>
-                        <input class="form-control" id="tourPackage" type="text" value="Ubud Tour 2" readonly>
+                        <input class="form-control" id="tourPackage" type="text" value="Kintamani Tour" readonly>
                       </div>
                       <div class="mb-3">
                         <label class="form-label fw-bold">Note ( Optional )</label>
@@ -294,7 +287,7 @@
       }
 
       body {
-        background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('assets/img/dest/ubud2/tirtaempul.jpg') no-repeat center center fixed;
+        background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('assets/img/dest/kintamani/mountbatur.jpeg') no-repeat center center fixed;
         background-size: cover;
       }
     </style>
