--- a/public/uluwatu-tour.html
+++ b/public/uluwatu-tour.html
@@ -65,19 +65,18 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <div class="mb-5"><img class="w-100 rounded-3" src="./assets/img/dest/ubud2.jpeg" alt="Ubud Tour 2"></div>
-              <h1 class="fw-bold fs-3 fs-lg-5 mb-3">Ubud Tour 2</h1>
-              <h5 class="text-warning fw-bold mb-4">Price : USD 55/ Car</h5>
+              <div class="mb-5"><img class="w-100 rounded-3" src="./assets/img/dest/uluwatu/uluwatutemple.jpg" alt="Uluwatu Tour"></div>
+              <h1 class="fw-bold fs-3 fs-lg-5 mb-3">Uluwatu Tour</h1>
+              <h5 class="text-warning fw-bold mb-4">Price : USD 65/ Car</h5>
               <div class="row mb-5">
                 <div class="col-md-6">
                   <h5 class="fw-bold mb-3">Itinerary :</h5>
                   <ul class="list-unstyled">
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>White water rafting</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>ATV ride</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tirta empul</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Gunung kawi temple</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Kanto lampo waterfall</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tibumana waterfall</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Water Sport</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>GWK (Garuda Wisnu Kencana)</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Melasti beach</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Uluwatu temple</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Dinner Jimbaran Seafood</li>
                   </ul>
                 </div>
                 <div class="col-md-6">
@@ -88,7 +87,6 @@
                     <li class="d-flex align-items-center mb-2"><i class="fas fa-check text-success me-3"></i>Charger plug</li>
                     <li class="d-flex align-items-center mb-2"><i class="fas fa-check text-success me-3"></i>Parking & toll fee</li>
                     <li class="d-flex align-items-center mb-2"><i class="fas fa-check text-success me-3"></i>Petrol</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-check text-success me-3"></i>White water rafting</li>
                   </ul>
                 </div>
               </div>
@@ -96,38 +94,32 @@
               <div class="d-flex flex-column gap-5">
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">White water rafting</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/whitewaterrafting.jpeg" alt="White water rafting">
-                    <p>Although there are many rivers in Bali, not all rivers are suitable for rafting trips. There are three river locations in Bali that are ideal for rafting trips. The river is the Ubud Ayung River, the Telaga Waja Karangasem River, and the Klungkung Melangit River. Every stream has pros and cons. However, for this page, we inform you about the arung Ayung river in Ubud Bali for rafting trips.</p>
+                    <h5 class="fw-bold text-warning">Water Sport</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/uluwatu/watersport.jpg" alt="Water Sport">
+                    <p>Bali Water Sports Tour is Bali Activities Tour Package which offer Comprehensive range of marine activities with great challenges, exciting and designed full of fun in Bali islands. It is offers variety of water activities from motorizes until non-motorize one and bring you to unforgettable experience to enjoy fun activities in the beach or in the ocean. Bali Water Sports Tour giving the fantastic experience marine adventures for everyone who desires to Enjoy The Exciting Bali Water Sports Tour program such as: Snorkeling, Parasailing, Jet Ski, Donut Boat, Water Ski, Flying Fish, Banana Boat, Wakeboarding, Glass Bottom Boat, Ocean Walker, Diving and Turtle Islands Tour With Competitive Rates. To keep guest comfortable all Bali Water Sports Tour activities are ensured by high quality safety equipment and medical insurance. Just enjoy the exciting Bali Water Sports activities of your choice.</p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">ATV ride</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/atvride.jpg" alt="ATV ride">
-                    <p>TV Ride Bali is an activity that uses four-wheeled motorbikes, usually used for agriculture now for recreation. The wheels are specifically modified for off-road environments, with a 250 cc engine capacity or a 350 cc engine. It is suitable for wet and off road terrain, reliable controls for maneuvering so ATV Ride is a tourist activity to test adrenaline, if you follow instructions and remain careful, ATV rides are guaranteed to be an unforgettable and exciting trip.</p>
+                    <h5 class="fw-bold text-warning">GWK (Garuda Wisnu Kencana)</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/uluwatu/gwk.jpg" alt="GWK">
+                    <p>Bali Garuda Wisnu Kencana (GWK) Bali is located in the southern Badung area about 20 minutes from Kuta. That's very easy to access it from the Ngurah Rai Airport and hotels in Nusa Dua. Garuda Wisnu Kencana (GWK) Bali cultural park is located in the hills of limestone and rock, exactly over the hill of Nusa Dua Pecatu-Badung regency that about 40 kilometers south of Denpasar City Bali, it was approximately 30 minutes drive from Ngurah Rai when using a motor vehicle.</p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">Tirta empul</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/tirtaempul.jpg" alt="Tirta empul">
-                    <p>Tirta Empul, meaning ‘holy water spring’ is actually the name of a water source located within the temple. The spring feeds various purification baths, pools and fish ponds surrounding the outer perimeter, which all flow to the Tukad Pakerisan River. Various sites throughout the region and many other archaeological relics relate to local myths and legends.</p>
+                    <h5 class="fw-bold text-warning">Melasti beach</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/uluwatu/melastibeach.jpg" alt="Melasti beach">
+                    <p>Melasti Beach is a beautiful beach located below a high cliff. unspoiled blue sea, make this beach to be one of the best in the region Ungasan. because many tourists who visit here, the beach melasti began repaired road to more easily reach the beach. High cliffs cleaved used as a road with many bends. from top, the road looks beautiful with limestone cliffs.</p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">Gunung kawi temple</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/gunungkawitemple.jpg" alt="Gunung kawi temple">
-                    <p>Gunung Kawi Temple complex, locally referred to as Pura Gunung Kawi, is one of Bali’s most unique archaeological sites, comprising a collection of ancient shrine reliefs carved into the face of a rock cliff. The main site overlooks the sacred Pakerisan River, which also flows by the Tirta Empul Temple a kilometre up north. Across the river from the ancient reliefs is a temple courtyard featuring old Hindu shrines in a more contemporary architectural style, which is attended by pilgrims especially during its ‘piodalan’ temple anniversaries.</p>
+                    <h5 class="fw-bold text-warning">Uluwatu temple</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/uluwatu/uluwatutemple.jpg" alt="Uluwatu temple">
+                    <p>Uluwatu Temple is one of Bali's nine key directional temples, though a small temple was claimed to have existed beforehand, the structure was significantly expanded by a Javanese sage, Empu Kuturan in the 11th Century. Another sage from East Java, Dang Hyang Nirartha is credited for constructing the padmasana shrines and is claimed to have attained Moksha.</p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">Kanto lampo waterfall</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/kantolampowaterfall.jpg" alt="Kanto lampo waterfall">
-                    <p>When you are bored with the views of the beaches in Bali, visiting a waterfall in the Gianyar region, the Kanto Lampo Waterfall is an interesting choice. Unlike the location of a waterfall that is usually located in the mountains or highlands, Kanto Lampo Gianyar Waterfall is even in the lowlands and has a hot temperature during the day.</p>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-12">
-                    <h5 class="fw-bold text-warning">Tibumana waterfall</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/ubud2/tibumanawaterfall.jpeg" alt="Tibumana waterfall">
-                    <p>You will never get bored of traveling to Bali. In addition to the beach, there are alternative tourist attractions that are not less beautiful to visit. Like Tibumana Waterfall, whose natural beauty is also able to attract tourists to come. This waterfall is unique because of its shape like a twin waterfall.Tibumana Waterfall is a twin waterfall with 2 adjacent water streams. But when the river water above it is small, there is only one large stream that drops into a waterfall. Under the waterfall there is a pool of water that is not too deep so it is very comfortable if used for swimming or bathing. The manager has also prepared tires that can be used as buoys.</p>
+                    <h5 class="fw-bold text-warning">Dinner Jimbaran Seafood</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/uluwatu/dinnerjimbaranseafood.webp" alt="Dinner Jimbaran Seafood">
+                    <p>Jimbaran Seafood Cafes and Restaurants have cemented themselves as a top Bali attraction in their own right. Especially for sunset. The beach has countless cafes and restaurants, some good, some great. There are three main clusters of restaurants.</p>
                   </div>
                 </div>
               </div>
@@ -158,7 +150,7 @@
                       </div>
                       <div class="mb-3">
                         <label class="form-label fw-bold">Tour Packages</label>
-                        <input class="form-control" id="tourPackage" type="text" value="Ubud Tour 2" readonly>
+                        <input class="form-control" id="tourPackage" type="text" value="Uluwatu Tour" readonly>
                       </div>
                       <div class="mb-3">
                         <label class="form-label fw-bold">Note ( Optional )</label>
@@ -294,7 +286,7 @@
       }
 
       body {
-        background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('assets/img/dest/ubud2/tirtaempul.jpg') no-repeat center center fixed;
+        background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('assets/img/dest/uluwatu/uluwatutemple.jpg') no-repeat center center fixed;
         background-size: cover;
       }
     </style>
