--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="modal-dialog modal-dialog-centered modal-lg">
                   <div class="modal-content">
                     <iframe class="rounded" style="width:100%;max-height:500px;" height="500px"
-                      src="https://www.youtube.com/embed/_GRUekziApDI" title="YouTube video player"
+                      src="https://www.youtube.com/embed/GRUekziApDI" title="YouTube video player"
                       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                       allowfullscreen="allowfullscreen"></iframe>
                   </div>
